[package]
name = "http-provider-reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.41.0"
cid = "0.7.0"
serde = "1.0.133"
serde_json = "1.0.74"
serde_with = {version = "1.11.0", features = ["base64"]}
base64 = "0.13.0"